# app/Http/Controllers/Contact/ContactController.php
@@ -21,7 +21,55 @@ class ContactController extends Controller
     }
 
     /**
-     * Display a listing of the resource.
+     * @OA\Get(
+     *     path="/contact",
+     *     tags={"Contact 🤝"},
+     *     summary="Get All Contact",
+     *     security={{"sanctum" : {}}},
+     *     @OA\Parameter(
+     *         name="Token",
+     *         in="header",
+     *         required=true,
+     *         example="Token Admin"
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Get All Contact",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="array",
+     *                 @OA\Items(
+     *                     @OA\Property(
+     *                         property="id",
+     *                         type="integer",
+     *                         example=1
+     *                     ),
+     *                     @OA\Property(
+     *                         property="userName",
+     *                         type="string",
+     *                         example="mona"
+     *                     ),
+     *                     @OA\Property(
+     *                         property="email",
+     *                         type="string",
+     *                         example="mona@gmail.com"
+     *                     ),
+     *                     @OA\Property(
+     *                         property="subject",
+     *                         type="string",
+     *                         example="test subject"
+     *                     ),
+     *                     @OA\Property(
+     *                         property="text",
+     *                         type="text",
+     *                         example="text ..."
+     *                     )
+     *                 )
+     *             )
+     *         )
+     *     )
+     * )
      */
     public function index()
     {
@@ -33,7 +81,54 @@ class ContactController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
+     * @OA\Post(
+     *     path="/contact",
+     *     tags={"Contact 🤝"},
+     *     summary="Create New Contact",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="userName",
+     *                     type="string",
+     *                     example="vahid karimi"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="email",
+     *                     type="string",
+     *                     example="vahid@gmail.com"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="subject",
+     *                     type="string",
+     *                     example="test"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="text",
+     *                     type="text",
+     *                     example="text"
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Create New Contact :)",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 property="message",
+     *                 type="string",
+     *                 example="Create Contact Success Fully :)"
+     *             ),
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Bad Request"
+     *     )
+     * )
      */
     public function store(ContactStoreRequest $request)
     {
@@ -46,7 +141,55 @@ class ContactController extends Controller
     }
 
     /**
-     * Display the specified resource.
+     * @OA\Get(
+     *     path="/contact/{contact_id}",
+     *     tags={"Contact 🤝"},
+     *     summary="Get One Contact",
+     *     security={{"sanctum" : {}}},
+     *     @OA\Parameter(
+     *         name="Token",
+     *         in="header",
+     *         required=true,
+     *         example="Token Admin"
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Get One Contact",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="array",
+     *                 @OA\Items(
+     *                     @OA\Property(
+     *                         property="id",
+     *                         type="integer",
+     *                         example=1
+     *                     ),
+     *                     @OA\Property(
+     *                         property="userName",
+     *                         type="string",
+     *                         example="mona"
+     *                     ),
+     *                     @OA\Property(
+     *                         property="email",
+     *                         type="string",
+     *                         example="mona@gmail.com"
+     *                     ),
+     *                     @OA\Property(
+     *                         property="subject",
+     *                         type="string",
+     *                         example="test subject"
+     *                     ),
+     *                     @OA\Property(
+     *                         property="text",
+     *                         type="text",
+     *                         example="text ..."
+     *                     )
+     *                 )
+     *             )
+     *         )
+     *     )
+     * )
      */
     public function show(string $id)
     {
@@ -58,7 +201,22 @@ class ContactController extends Controller
     }
 
     /**
-     * Remove the specified resource from storage.
+     * @OA\Delete(
+     *     path="/contact/{contact_id}",
+     *     tags={"Contact 🤝"},
+     *     summary="Delete Contact ",
+     *     security={{"sanctum" : {}}},
+     *     @OA\Parameter(
+     *         name="Token",
+     *         in="header",
+     *         required=true,
+     *         example="Token Admin"
+     *     ),
+     *     @OA\Response(
+     *         response=204,
+     *         description="Delete Contact Success Fully :))",
+     *     )
+     * )
      */
     public function destroy(string $id)
     {
